# thrifty-sailor

./: .gitignore  ChangeLog.md  LICENSE  Main.hs  NOTES.md  README.md  TODO.md  cabal.config  cabal.project.freeze  package.cabal  package.vim
delays/Thrifty/: Delays.hs
delays/ThriftySailor/: Delays.hs
do/Thrifty/: DO.hs
hetzner/Thrifty/: Hetzner.hs
json/Thrifty/: JSON.hs
json/ThriftySailor/: JSON.hs
main/Thrifty/: Main.hs
network-sig/Thrifty/: Network.hsig
network/Thrifty/: Network.hs
network/ThriftySailor/: Network.hs
prelude/Thrifty/: Prelude.hs
prelude/ThriftySailor/: Prelude.hs
src/: ThriftySailor.hs
src/Control/Monad/Error/: Hoist.hs
src/ThriftySailor/: Main.hs
thrifty/: Thrifty.hs
