name:                thrifty
version:             0.3
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              daniel
maintainer:          daniel@bogusemailserver.com
-- copyright:           
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=2

-- The providers from different internal libraries are assembled here.
executable thrifty
    main-is:             Main.hs
    build-depends:       
        base                 >=4.10 && <5,
        thrifty-main,
        thrifty,
        t-do,
        -- Concrete networking implementation that satisfies the hsig 
        t-network 
    default-language:    Haskell2010
    -- ghc-options: -fno-warn-partial-type-signatures

library thrifty-main
  exposed-modules:     
        Thrifty.Main
  build-depends:
        -- This library doesn't know about:
        -- - Concrete networking / auth implementation.
        -- - Concrete provider implementations.
        base                 >= 4.10 && <5,
        bytestring           >= 0.10 && <0.11,
        text                 >= 1.2 && <1.3,
        aeson                >= 1.3,
        directory            >= 1.3.2.0,
        filepath             >= 1.4.2,
        mtl                  >= 2.2.2,
        red-black-record     >= 2.0.2.2,
        optparse-applicative >= 0.14.0.0 && < 0.15,
        containers           >= 0.6,
        prelude,
        thrifty,
        thrifty-json
  hs-source-dirs:      main
  default-language:    Haskell2010

-- The basic interface that a provider internal library must fill.
library
  exposed-modules:     
        Thrifty
  build-depends:
        base             >= 4.10 && <5,
        aeson            >= 1.3,
        prelude
  hs-source-dirs:      thrifty
  default-language:    Haskell2010

-- Provider definition for Digital Ocean
library t-do
  exposed-modules:     
        Thrifty.DO
  build-depends:
        -- This library doesn't know about:
        -- - Concrete networking / auth implementation.
        base             >= 4.10 && <5,
        text             >= 1.2 && <1.3,
        aeson            >= 1.3,
        red-black-record >= 2.0.2.2,
        mtl              >= 2.2.2,
        transformers     >= 0.5,
        lens             >= 4.4 && <5,
        generic-lens     >= 1.0.0.0,
        t-network-sig,
        delays,
        thrifty-json,
        thrifty,
        prelude

  hs-source-dirs:      do
  default-language:    Haskell2010
  
library thrifty-json
  exposed-modules:     
        Thrifty.JSON
  build-depends:
        base             >= 4.10 && <5,
        bytestring       >= 0.10 && <0.11,
        text             >= 1.2 && <1.3,
        aeson            >= 1.3,
        red-black-record >= 2.0.2.2,
        sop-core         >= 0.4.0.0
  hs-source-dirs:      json
  default-language:    Haskell2010

library delays
  exposed-modules:     
        Thrifty.Delays
  build-depends:
        base             >= 4.10 && <5,
        streaming        >= 0.2.1,
        time             >= 1.8
  hs-source-dirs:      delays
  default-language:    Haskell2010

library t-network-sig
  signatures:
        Thrifty.Network
  build-depends:
        base             >= 4.10 && <5,
        text             >= 1.2 && <1.3,
        aeson            >= 1.3
  hs-source-dirs:      network-sig
  default-language:    Haskell2010

library t-network
  exposed-modules:     
        Thrifty.Network
  build-depends:
        base             >= 4.10 && <5,
        bytestring       >= 0.10 && <0.11,
        text             >= 1.2 && <1.3,
        aeson            >= 1.3,
        lens             >= 4.4 && <5,
        wreq             >= 0.5.2.1
  hs-source-dirs:      network
  default-language:    Haskell2010

library prelude
  exposed-modules:     
        Thrifty.Prelude
  build-depends:
        base             >= 4.10 && <5,
        mtl              >= 2.2.2
  hs-source-dirs:      prelude
  default-language:    Haskell2010

